dual/app/Kefico/Dsa.Kefico.Cp/bin/x86/nmc2.h



typedef struct NMC_CONT_STATUS
{
	short nStatus[2];
	short nExeNodeNo[2];
}NMCCONTSTATUS,*PNMCCONTSTATUS;


typedef struct TNMC_MAP_DATA
{
	int		nMapCount;
	int	lMapData[52];
	double	dMapData[52];
}NMCMAPDATA,*PNMCMAPDATA;

	short WINAPI nmc_GetAxesCmdSpeed(short nNmcNo, double *pDrvSpeed); // 사용안함
	short WINAPI nmc_GetAxesEncSpeed(short nNmcNo, double *pdEncSpeed); // 사용안함
short WINAPI nmc_GetAxesCmdEncSpeed(short nNmcNo, double *pdCmdSpeed, double *pdEncSpeed);

short WINAPI nmc_SetEmgEnable(short nNmcNo, short nEnable);

//------------------------------------------------------------------------------
short WINAPI nmc_GetBusyStatus(short nNmcNo, short nAxisNo, short *pnBusyStatus);

short WINAPI nmc_GetBusyStatusAll(short nNmcNo, short *pnBusyStatus);

//------------------------------------------------------------------------------
	short WINAPI nmc_SetTriggerCfg(short nNmcNo, short nAxis, short nCompMode, int lCmpAmount, double dDioOnTime,  //사용안함
									short nPinNo, short nDioType, short nReserve); //사용안함
short WINAPI nmc_SetTriggerEnable(short nNmcNo, short nAxis,short nEnable); //사용안함
//------------------------------------------------------------------------------
short WINAPI nmc_GetMapIO(short nNmcNo,short *pnMapInStatus);

short WINAPI nmc_MapMove(short nNmcNo, short nAxis, double dPos,short nMapIndex, short nOpt);

short WINAPI nmc_MapMoveEx(short nNmcNo, short nAxis, double dPos,short nMapIndex,short nOpt, short nPosType);

short WINAPI nmc_GetMapData(short nNmcNo,short nMapIndex, PNMCMAPDATA pNmcMapData);

short WINAPI nmc_GetMapDataEx(short nNmcNo, short nMapIndex, short nDataIndex, PNMCMAPDATA pNmcMapData);

//------------------------------------------------------------------------------
short WINAPI nmc_SetGantryAxis(short nNmcNo, short nGroupNo,short nMain, short nSub);

short WINAPI nmc_SetGantryEnable(short nNmcNo, short nGroupNo, short nEnable);

short WINAPI nmc_GetGantryInfo(short nNmcNo,short *pnEnable,short *pnMainAxes,short *pnSubAxes);

// MPG모드
short WINAPI nmc_SetMpgMode(short nNmcNo, short nAxisNo, short nMode, long lPulse);

//------------------------------------------------------------------------------
//-------------연속보간-------------------------------------------------------
short WINAPI nmc_ContRun(short nNmcNo, short nGroupNo, short nRunMode);

short WINAPI nmc_GetContStatus (short nNmcNo, PNMCCONTSTATUS pContStatus);

short WINAPI nmc_SetContNodeLine(short nNmcNo, short nGroupNo, short nNodeNo, short nAxisNo0, short nAxisNo1, double dPos0, double dPos1, double dStart,double dAcc, double dDec , double dDriveSpeed);

short WINAPI nmc_SetContNodeLineIO(short nNmcNo, short nGroupNo, short nNodeNo, short nAxisNo0, short nAxisNo1, double dPos0, double dPos1, double dStart,double dAcc, double dDec , double dDriveSpeed, short nOnOff);

short WINAPI nmc_SetContNode3Line(short nNmcNo, short nGroupNo, short nNodeNo, short nAxisNo0, short nAxisNo1, short nAxisNo2, double dPos0, double dPos1, double dPos2, double dStart,double dAcc, double dDec , double dDriveSpeed);

short WINAPI nmc_SetContNode3LineIO(short nNmcNo, short nGroupNo, short nNodeNo, short nAxisNo0, short nAxisNo1, short nAxisNo2, double dPos0, double dPos1, double dPos2, double dStart,double dAcc, double dDec , double dDriveSpeed, short nOnOff);

short WINAPI nmc_SetContNodeArc(short nNmcNo, short nGroupNo, short nNodeNo, short nAxisNo0, short nAxisNo1, double dCenter0, double dCenter1, double dAngle, double dStart,double dAcc, double dDec, double dDriveSpeed);

short WINAPI nmc_SetContNodeArcIO(short nNmcNo, short nGroupNo, short nNodeNo, short nAxisNo0, short nAxisNo1, double dCenter0, double dCenter1, double dAngle, double dStart,double dAcc, double dDec, double dDriveSpeed, short nOnOff);

short WINAPI nmc_ContNodeClear(short nNmcNo,short nGroupNo);

short WINAPI nmc_ContSetIO(short nNmcNo, short nGroupNo, short nIoType, short nIoPinNo, short nEndNodeOnOff);

//------------------------------------------------------------------------------
short WINAPI nmc_GetCmdPos(short nNmcNo, short nAxis,int *plCmdPos);

short WINAPI nmc_GetEncPos(short nNmcNo, short nAxis,int *plEncPos);

//------------------------------------------------------------------------------
short WINAPI nmc_SetDisconnectedStopMode(short nNmcNo, int lTimeInterval, short nStopMode);

	short WINAPI nmc_SetDisconectedStopMode(short nNmcNo, int lTimeInterval, short nStopMode); // 사용안함
short WINAPI nmc_SetSerialConfig(short nNmcNo, short nBaud, short nData, short nStop, short nParity);

short WINAPI nmc_SetSerialMode(short nNmcNo, short nMode);

short WINAPI nmc_SerialWrite(short nNmcNo, short nLen, char *pStr);

short WINAPI nmc_SerialRead(short nNmcNo, short *pnReadLen,char *pReadStr);
/* 무제한 연속 보간 상태 체크 시 응답 구조체 - UCI */
typedef struct NMC_CONTI_STATUS
{
	short nContiRun[2];                     // 연속 보간 실행 여부(1:Run, 0:Stop)
	short nContiWait[2];                    // 1: 큐버퍼의 노드를 모두 소진하여 다음 노드 전송을 대기, 0:큐버퍼에 실행 할 Data가 있음
	short nContiRemainBuffNum[2];           // 비어 있는 큐버퍼의 수(0 ~ 1024)
	unsigned long nContiExecutionNum[2];    // 실행 중인 연속 보간의 수(0 ~ 4,294,967,295)
	short nDummy[6];                        // dummy buff.
}NMCCONTISTATUS,*PNMCCONTISTATUS;

/* 무제한 연속 보간 큐버퍼 초기화 함수 - UCI */
short WINAPI nmc_ContiSetNodeClear(short nNmcNo,short nGroupNo);

/* 무제한 연속 보간 초기 설정 함수 - UCI */
short WINAPI nmc_ContiSetMode(short nNmcNo,short nGroupNo,short nAVTRIMode,short nEmptyMode,short n1stAxis,short n2ndAxis,short n3rdAxis,double dMaxDrvSpeed,short nIoType,int nIoCtrlPinMask,int nIoCtrlEndVal);

/* 무제한 연속 보간 상태 체크 함수 - UCI */
short WINAPI nmc_ContiGetStatus(short nNmcNo, PNMCCONTISTATUS pContiStatus);

/* 무제한 연속 보간 2축 직선 보간 함수 - UCI */
short WINAPI nmc_ContiAddNodeLine2Axis(short nNmcNo,short nGroupNo,double dPos0,double dPos1,double dStart,double dAcc,double dDec,double dDrvSpeed,int nIoCtrlVal);

/* 무제한 연속 보간 3축 직선 보간 함수 - UCI */
short WINAPI nmc_ContiAddNodeLine3Axis(short nNmcNo,short nGroupNo,double dPos0,double dPos1,double dPos2,double dStart,double dAcc,double dDec,double dDrvSpeed,int nIoCtrlVal);

/* 무제한 연속 보간 2축 원호 보간 함수 - UCI */
short WINAPI nmc_ContiAddNodeArc(short nNmcNo,short nGroupNo,double dCenter0,double dCenter1,double dAngle,double dStart,double dAcc,double dDec,double dDrvSpeed,int nIoCtrlVal);

/* 무제한 연속 보간 노드 추가 종료 함수 - UCI */
short WINAPI nmc_ContiSetCloseNode(short nNmcNo,short nGroupNo);

/* 무제한 연속 보간 실행/정지 함수 - UCI */
short WINAPI nmc_ContiRunStop(short nNmcNo, short nGroupNo, short nRunMode);


// -------------------------------------------------  End  -------------------------------------------------- //
// Unlimited Continuous Interpolation
// ---------------------------------------------------------------------------------------------------------- //
short WINAPI nmc_AVTRISetMode(short nNmcNo,short nAxis,short nAVTRIMode);

short WINAPI nmc_AVTRIGetMode(short nNmcNo,short nAxis,short *pnAVTRIMode);


// ---------------------------------------------------------------------------------------------------------- //
void WINAPI nmc_SetWaitTime(int nNmcNo,long lWaitTime);										//20160418 han 통신대기 시간