dual/app/Kefico/Dsa.Kefico.Cp/Dsu.Driver.PaixWrapper/nmc2.cs


        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetBusyStatus")]
        public static extern short GetBusyStatus(short nNmcNo, short nAxisNo, out short pnBusyStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetBusyStatusAll")]
        public static extern short GetBusyStatusAll(short nNmcNo, short[] pnBusyStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetTriggerCfg")]
        public static extern short SetTriggerCfg(short nNmcNo, short nAxis, short nCmpMode, int lCmpAmount, double dDioOnTime, short nPinNo, short nDioType, short nReserve);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetTriggerEnable")]
        public static extern short SetTriggerEnable(short nNmcNo, short nAxis, short nEnable);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetMapIO")]
        public static extern short GetMapIO(short nNmcNo, short[] pnMapInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_MapMove")]
        public static extern short MapMove(short nNmcNo, short nAxis, double dPos, short nMapIndex, short nOpt);
        [DllImport("NMC2.dll", EntryPoint = "nmc_MapMoveEx")]
        public static extern short MapMoveEx(short nNmcNo, short nAxis, double dPos, short nMapIndex, short nOpt, short nPosType);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetMapData")]
        public static extern short GetMapData(short nNmcNo, short nMapIndex, out NMCMAPDATA pNmcMapData);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetMapDataEx")]
        public static extern short GetMapDataEx(short nNmcNo, short nMapIndex, short nDataIndex, out NMCMAPDATA pNmcMapData);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetAxesCmdSpeed")]
        public static extern short GetAxesCmdSpeed(short nNmcNo, double[] pDrvSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetAxesEncSpeed")]
        public static extern short GetAxesEncSpeed(short nNmcNo, double[] pdEncSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetAxesCmdEncSpeed")]
        public static extern short GetAxesCmdEncSpeed(short nNmcNo, double[] pdCmdSpeed, double[] pdEncSpeed);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetGantryAxis")]
        public static extern short SetGantryAxis(short nNmcNo, short nGroupNo, short nMain, short nSub);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetGantryEnable")]
        public static extern short SetGantryEnable(short nNmcNo, short nGroupNo, short nGantryEnable);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetGantryInfo")]
        public static extern short GetGantryInfo(short nNmcNo, short[] pnEnable, short[] pnMainAxes, short[] pnSubAxes);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_ContRun")]
        public static extern short ContRun(short nNmcNo, short nGroupNo, short nRunMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetContStatus")]
        public static extern short GetContStatus(short nNmcNo, out NMCCONTSTATUS pContStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetContNodeLine")]
        public static extern short SetContNodeLine(short nNmcNo, short nGroupNo, short nNodeNo,
                short nAxisNo0, short nAxisNo1,
                double dPos0, double dPos1,
                double dStart, double dAcc, double dDec, double dDriveSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetContNodeLineIO")]
        public static extern short SetContNodeLineIO(short nNmcNo, short nGroupNo, short nNodeNo,
                short nAxisNo0, short nAxisNo1,
                double dPos0, double dPos1,
                double dStart, double dAcc, double dDec, double dDriveSpeed, short nOnOff);


        [DllImport("NMC2.dll", EntryPoint = "nmc_SetContNode3Line")]
        public static extern short SetContNode3Line(short nNmcNo, short nGroupNo, short nNodeNo,
                    short nAxisNo0, short nAxisNo1, short nAxisNo2,
                    double dPos0, double dPos1, double dPos2,
                    double dStart, double dAcc, double dDec, double dDriveSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetContNode3LineIO")]
        public static extern short SetContNode3LineIO(short nNmcNo, short nGroupNo, short nNodeNo,
                    short nAxisNo0, short nAxisNo1, short nAxisNo2,
                    double dPos0, double dPos1, double dPos2,
                    double dStart, double dAcc, double dDec, double dDriveSpeed, short nOnOff);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetContNodeArc")]
        public static extern short SetContNodeArc(short nNmcNo, short nGroupNo, short nNodeNo,
                short nAxisNo0, short nAxisNo1,
                double dCenter0, double dCenter1, double dAngle,
                double dStart, double dAcc, double dDec, double dDriveSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetContNodeArcIO")]
        public static extern short SetContNodeArcIO(short nNmcNo, short nGroupNo, short nNodeNo,
                short nAxisNo0, short nAxisNo1,
                double dCenter0, double dCenter1, double dAngle,
                double dStart, double dAcc, double dDec, double dDriveSpeed, short nOnOff);

        [DllImport("NMC2.dll", EntryPoint = "nmc_ContNodeClear")]
        public static extern short ContNodeClear(short nNmcNo, short nGroupNo);

        [DllImport("NMC2.dll", EntryPoint = "nmc_ContSetIO")]
        public static extern short ContSetIO(short nNmcNo, short nGroupNo, short nIoType, short nIoPinNo, short nEndNodeOnOff);

        [DllImport("NMC2.dll", EntryPoint = "nmc_GetCmdPos")]
        public static extern short GetCmdPos(short nNmcNo, short nAxis, out int plCmdPos);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetEncPos")]
        public static extern short GetEncPos(short nNmcNo, short nAxis, out int plEncPos);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDisconectedStopMode")]
        public static extern short SetDisconectedStopMode(short nNmcNo, int lTimeInterval, short nStopMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDisconnectedStopMode")]
        public static extern short SetDisconnectedStopMode(short nNmcNo, int lTimeInterval, short nStopMode);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEmgEnable")]
        public static extern short SetEmgEnable(short nNmcNo, short nEnable);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetSerialConfig")]
        public static extern short SetSerialConfig(short nNmcNo, short nBaud, short nData, short nStop, short nParity);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetSerialMode")]
        public static extern short SetSerialMode(short nNmcNo, short nMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SerialWrite")]
        public static extern short SerialWrite(short nNmcNo, short nLen, char[] pStr);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SerialRead")]
        public static extern short SerialRead(short nNmcNo, out short pnReadLen, char[] pReadStr);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMpgMode")]
        public static extern short SetMpgMode(short nNmcNo, short nAxisNo, short nMode, long lPulse);

        [DllImport("NMC2.dll", EntryPoint = "nmc_ContiSetNodeClear")] // 무제한 연속 보간 큐버퍼 초기화 함수 - UCI 
        public static extern short ContiSetNodeClear(short nNmcNo, short nGroupNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_ContiSetMode")] // 무제한 연속 보간 초기 설정 함수 - UCI
        public static extern short ContiSetMode(short nNmcNo, short nGroupNo, short nAVTRIMode, short nEmptyMode, short n1stAxis, short n2ndAxis, short n3rdAxis, double dMaxDrvSpeed, short nIoType, int nIoCtrlPinMask, int nIoCtrlEndVal);
        [DllImport("NMC2.dll", EntryPoint = "nmc_ContiGetStatus")] // 무제한 연속 보간 상태 체크 함수 - UCI
        public static extern short ContiGetStatus(short nNmcNo, out NMCCONTISTATUS pContiStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_ContiAddNodeLine2Axis")] // 무제한 연속 보간 2축 직선 보간 함수 - UCI
        public static extern short ContiAddNodeLine2Axis(short nNmcNo, short nGroupNo, double dPos0, double dPos1, double dStart, double dAcc, double dDec, double dDrvSpeed, int nIoCtrlVal);
        [DllImport("NMC2.dll", EntryPoint = "nmc_ContiAddNodeLine3Axis")] // 무제한 연속 보간 3축 직선 보간 함수 - UCI
        public static extern short ContiAddNodeLine3Axis(short nNmcNo, short nGroupNo, double dPos0, double dPos1, double dPos2, double dStart, double dAcc, double dDec, double dDrvSpeed, int nIoCtrlVal);
        [DllImport("NMC2.dll", EntryPoint = "nmc_ContiAddNodeArc")] // 무제한 연속 보간 2축 원호 보간 함수 - UCI
        public static extern short ContiAddNodeArc(short nNmcNo, short nGroupNo, double dCenter0, double dCenter1, double dAngle, double dStart, double dAcc, double dDec, double dDrvSpeed, int nIoCtrlVal);
        [DllImport("NMC2.dll", EntryPoint = "nmc_ContiSetCloseNode")] // 무제한 연속 보간 노드 추가 종료 함수 - UCI
        public static extern short ContiSetCloseNode(short nNmcNo, short nGroupNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_ContiRunStop")] // 무제한 연속 보간 실행/정지 함수 - UCI
        public static extern short ContiRunStop(short nNmcNo, short nGroupNo, short nRunMode);

        [DllImport("NMC2.dll", EntryPoint = "nmc_AVTRISetMode")] // 삼각파형 방지 기능 설정
        public static extern short AVTRISetMode(short nNmcNo, short nAxis, short nAVTRIMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_AVTRIGetMode")] // 삼각파형 방지기능 설정값 가져오기
        public static extern short AVTRIGetMode(short nNmcNo, short nAxis, out short nAVTRIMode);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetWaitTime")] //응답대기시간 설정
        public static extern short SetWaitTime(short nNmcNo, long lWaitTime);
    };
};
//------------------------------------------------------------------------------

//DESCRIPTION  'NMC Windows Dynamic Link Library'     -- *def file* description ....


